[package]
name = "mdx-music-separator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
apodize = "1.0.0"
clap = { version = "4.5.53", features = ["derive"] }
hound = "3.5.1"
ndarray = { version = "0.16.1", features = ["rayon", "matrixmultiply-threading"] }
ndarray-stats = "0.6.0"
num-complex = { version = "0.4.6", features = ["bytemuck", "libm"] }
num-traits = { version = "0.2.19", features = ["libm"] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "ndarray"] }
rustfft = "6.4.1"
